preproccessing on select families using pytorch

--- a/Charlie/1.1-Preprocessing.ipynb
+++ b/Charlie/1.1-Preprocessing.ipynb
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Available dataset partitions:  ['dev', 'train', 'preprocess', 'test', 'download.sh']\n"
+      "Available dataset partitions:  ['dev', '.ipynb_checkpoints', 'train', 'preprocess', 'test', 'download.sh']\n"
      ]
     }
    ],
@@ -76,8 +76,8 @@
       "Dataset partition \"test\" has 126171 sequences\n",
       "Dataset partition \"dev\" has 126171 sequences\n",
       "Dataset partition \"train\" has 1086741 sequences\n",
-      "CPU times: user 6.47 s, sys: 1.01 s, total: 7.48 s\n",
-      "Wall time: 9.86 s\n"
+      "CPU times: user 6.85 s, sys: 1.16 s, total: 8.01 s\n",
+      "Wall time: 8.19 s\n"
      ]
     }
    ],
@@ -445,28 +445,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "[enforce fail at CPUAllocator.cpp:64] . DefaultCPUAllocator: can't allocate memory: you tried to allocate 226042128000 bytes. Error code 12 (Cannot allocate memory)\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-10-5b93bd5ca89a>\u001b[0m in \u001b[0;36mmake_one_hot\u001b[0;34m(Xs, vocab, max_len)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmake_one_hot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvocab\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_len\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mn_vocab\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvocab\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mtensor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_len\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_vocab\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mchidx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mmax_len\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: [enforce fail at CPUAllocator.cpp:64] . DefaultCPUAllocator: can't allocate memory: you tried to allocate 226042128000 bytes. Error code 12 (Cannot allocate memory)\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "359\n",
+      "(18507,)\n",
+      "CPU times: user 259 ms, sys: 8.1 ms, total: 267 ms\n",
+      "Wall time: 265 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "\n",
+    "fams = np.array(train[\"family_id\"].value_counts().index)[::20]\n",
+    "partition = train[train[\"family_id\"].isin(train_fams)]\n",
     "max_len = int(prepro_conf['OneHot']['MaxLen'])\n",
-    "X_train_raw = train['aligned_sequence'].values\n",
-    "X_test_raw = test['aligned_sequence'].values\n",
+    "X = partition['aligned_sequence'].values\n",
+    "y = partition['family_id'].values\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train_raw, X_test_raw, y_train_raw, y_test_raw = train_test_split(X, y, test_size=0.25, random_state=41)\n",
+    "all_fam = {fam: idx for idx, fam in enumerate(list(set(y)))}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1min 20s, sys: 1.71 s, total: 1min 22s\n",
+      "Wall time: 1min 21s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "max_len = 3000\n",
     "X_train = make_one_hot(X_train_raw, vocab, max_len)\n",
     "X_test = make_one_hot(X_test_raw, vocab, max_len)\n",
     "#X_train = one_hot_encoding(X_train_raw, vocab, max_len)\n",
@@ -475,40 +496,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_train_raw, y_test_raw = train['family_id'].values, test['family_id'].values\n",
-    "all_fam = {fam: idx for idx, fam in enumerate(list(set(y_train_raw)))}\n",
-    "y_train_raw = np.array([all_fam.get(fam, len(all_fam)) for fam in y_train_raw])\n",
-    "y_test_raw = np.array([all_fam.get(fam, len(all_fam)) for fam in y_test_raw])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "[enforce fail at CPUAllocator.cpp:64] . DefaultCPUAllocator: can't allocate memory: you tried to allocate 226042128000 bytes. Error code 12 (Cannot allocate memory)\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-86447933e411>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#y_test = one_hot_encoding([y_test_raw], all_fam, max_len)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0my_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmake_one_hot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train_raw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvocab\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_len\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmake_one_hot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test_raw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvocab\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_len\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-10-5b93bd5ca89a>\u001b[0m in \u001b[0;36mmake_one_hot\u001b[0;34m(Xs, vocab, max_len)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmake_one_hot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvocab\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_len\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mn_vocab\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvocab\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mtensor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_len\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_vocab\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mchidx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mmax_len\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: [enforce fail at CPUAllocator.cpp:64] . DefaultCPUAllocator: can't allocate memory: you tried to allocate 226042128000 bytes. Error code 12 (Cannot allocate memory)\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 611 ms, sys: 27.9 ms, total: 639 ms\n",
+      "Wall time: 350 ms\n"
      ]
     }
    ],
    "source": [
-    "#y_train = one_hot_encoding([y_train_raw], all_fam, max_len)\n",
-    "#y_test = one_hot_encoding([y_test_raw], all_fam, max_len)\n",
+    "%%time\n",
+    "max_len = 1\n",
+    "y_train = make_one_hot(np.expand_dims(y_train_raw, axis=1), all_fam, max_len)\n",
+    "y_test = make_one_hot(np.expand_dims(y_test_raw, axis=1), all_fam, max_len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 223 ms, sys: 6.55 s, total: 6.77 s\n",
+      "Wall time: 32.4 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "path = {'x_train': '../data/preprocess/x_train.pt',\n",
+    "       'x_test': '../data/preprocess/x_test.pt',\n",
+    "       'y_train': '../data/preprocess/y_train.pt',\n",
+    "       'y_test': '../data/preprocess/y_test.pt'}\n",
     "\n",
-    "y_train = make_one_hot(y_train_raw, vocab, max_len)\n",
-    "y_test = make_one_hot(y_test_raw, vocab, max_len)"
+    "torch.save(X_train, path['x_train'])\n",
+    "torch.save(X_test, path['x_test'])\n",
+    "torch.save(X_train, path['y_train'])\n",
+    "torch.save(X_train, path['y_test'])"
    ]
   },
   {
@@ -516,18 +547,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "%%time\n",
-    "path = {'x_train': '../data/preprocess/x_train.npz',\n",
-    "       'x_test': '../data/preprocess/x_test.npz',\n",
-    "       'y_train': '../data/preprocess/y_train.npz',\n",
-    "       'y_test': '../data/preprocess/y_test.npz'}\n",
-    "\n",
-    "#parse_and_save_dense_mat(X_train, path['x_train'])\n",
-    "#parse_and_save_dense_mat(X_test, path['x_test'])\n",
-    "#parse_and_save_dense_mat(y_train, path['y_train'])\n",
-    "#parse_and_save_dense_mat(y_test, path['y_test'])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
